# seisflows

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  TODO.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: all-issues.md  issue-template.md
doc/: conf.py  index.rst
doc/examples/: simple_example.rst
doc/ref/: seisflows.extensions.optimize.rst  seisflows.tools.rst  (+5 more)
docs/: 2D_example_walkthrough.rst  Makefile  README.md  background.rst  changelog.rst  citeme.rst  cluster_setup.rst  command_line_tool.rst  conf.py  containers.rst  design.rst  environment.yml  example_on_cluster.rst  examples.rst  extending.rst  getting_started.rst  getting_started_chinook.rst  index.rst  inheritance.rst  instructions.rst  instructions_local.rst  instructions_remote.rst  manual.rst  noise_inversion.rst  notes.rst  overview.rst  parameter_file.rst  preprocessing.rst  running_on_chinook.rst  specfem2d_example.rst  start_here.rst  tiger.rst  tips_and_tricks.rst  working_directory.rst
scripts/: fwirun  fwisetup  gllplot  gridplot  plotgrid  plotmesh  plotsegy  plotseis  segyplot  seisflows  sf  sfclean  sfdebug  sfexamples  sfexamples-research  sfinit  sfrestart  sfresume  sfrun  sfsetup  sfsubmit  submit
seisflows/: __init__.py  config.py  core.py  parameters.py  parameters.yaml  parameters.yml  paths.py  seisflows.py
seisflows.egg-info/: PKG-INFO  SOURCES.txt
seisflows3/: __init__.py  config.py  seisflows.py
seisflows3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: import_all  run_test_checkers_2d  run_test_import  run_test_optimize  run_test_preprocess  run_test_system  run_test_tools  run_tiger_inversion  run_tiger_migration  test_import
(+932 files in other folders)
