[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seisflows"
version = "3.4.0"
description = "An automated workflow tool for full waveform inversion"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "adjTomo Dev Team"},
    {email = "adjtomo@gmail.com"}
]
dependencies = [
    "obspy",
    "pyyaml",
    "pypdf",
    "IPython",
    "dill",
    "pyatoa>=0.4.0",
    "pysep-adjtomo",
]

[project.optional-dependencies]
dev = [
    "pytest", 
    "pyatoa @ git+https://github.com/adjtomo/pyatoa.git@devel",
    "pysep-adjtomo @ git+https://github.com/adjtomo/pysep.git@devel"
]

[project.urls]
homepage = "https://github.com/adjtomo/"
documentation = "https://seisflows.readthedocs.io"
repository = "https://github.com/adjtomo/seisflows"

[project.scripts]
seisflows = "seisflows.seisflows:main"
